@@ -135,7 +135,7 @@ public class TablePane extends JPanel{
 		for(int i=1;i<this.getComponentCount();i++){
 			((Row)this.getComponent(i)).hideCol(colNum);
 		}
-		hiddenCols.add(new Integer(colNum));
+		hiddenCols.add(colNum);
 	}
 	
 	public void unhideColumn(int colNum){
@@ -143,7 +143,7 @@ public class TablePane extends JPanel{
 		for(int i=1;i<this.getComponentCount();i++){
 			((Row)this.getComponent(i)).unhideCol(colNum);
 		}
-		hiddenCols.remove(new Integer(colNum));
+		hiddenCols.remove(Integer.valueOf(colNum));
 		
 	}
 
