@@ -74,8 +74,9 @@ public class TimeEvent implements Comparable<TimeEvent> {
         if (obj instanceof TimeEvent) {
             TimeEvent te = (TimeEvent) obj;
             return te.startTime == this.startTime && te.endTime == this.endTime;
-        } else
+        } else {
             return false;
+        }
     }
 
     @Override
@@ -89,7 +90,7 @@ public class TimeEvent implements Comparable<TimeEvent> {
     }
 
     public int compareTo(TimeEvent te) {
-        return new Long(this.startTime).compareTo(te.startTime);
+        return Long.valueOf(this.startTime).compareTo(te.startTime);
     }
  
     public static List<? extends TimeEvent> getTimeOrderedEvents(List<? extends TimeEvent> events) {
@@ -98,5 +99,16 @@ public class TimeEvent implements Comparable<TimeEvent> {
         Arrays.sort(eventsArray);
         return Arrays.asList(eventsArray);
     }
-    
+
+    @Override
+    public int hashCode() {
+        int result;
+        long temp;
+        result = (int) (startTime ^ (startTime >>> 32));
+        result = 31 * result + (int) (endTime ^ (endTime >>> 32));
+        result = 31 * result + (int) (dur ^ (dur >>> 32));
+        temp = Double.doubleToLongBits(priority);
+        result = 31 * result + (int) (temp ^ (temp >>> 32));
+        return result;
+    }
 }
